[package]
name = "is-laptop"
description = "A rust crate for checking if the device is a laptop or not"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmionSky/is-laptop"

[target.'cfg(target_os = "windows")'.dependencies]
serde = { version = "1.0.0", features = ["derive"] }
wmi = "0.9"
