[package]
name = "is-laptop"
description = "A rust crate for checking if the device is a laptop or not"
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmionSky/is-laptop"

[target.'cfg(target_os = "windows")'.dependencies]
regex = "1.0.0"
windows = { version = "0.44.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Wmi",
    "Win32_Security",
] }
